--- a/src/css/values.less
+++ b/src/css/values.less
@@ -10,7 +10,7 @@
 @width2060: ~"(max-width: 2060px)";
 @widthmax: ~"(max-width: 1000000px)";
 
-@df-serif: "FarnhamText", Georgia, serif;
+@df-serif: Georgia, serif;
 @df-sans: "AntennaMedium", Helvetica Neue, Helvetica, sans-serif;
 @df-icon: "icomoon";
 
