--- a/src/css/project.less
+++ b/src/css/project.less
@@ -23,6 +23,7 @@
     font-family: @block-graphics;
     font-style:italic; 
     font-size:4em;
+    margin-bottom:0;
     color:#FF5C00;
     line-height:1;
     text-align:center;
@@ -62,7 +63,7 @@
 
     @media @mobile{
       font-size:14px;
-      padding:0;
+      padding: 0 19px;
       line-height:1.56;
       margin:0 auto 20px;
     }
@@ -273,7 +274,7 @@ section{
         .flex(0 1 47%);
 
         @media @mobile{
-          .flex(0 1 90%);
+          .flex(1 0 90%);
         }
       }
 
@@ -500,4 +501,35 @@ section{
   @media @mobile{
   padding:2em 1em;
   }
+}
+
+#social{
+  .display-flex;
+  max-width: 150px;
+  margin: 0 auto;
+  justify-content: space-around;
+
+  .social{
+    .flex(0 1 3%);
+    font-size:1.52em;
+    padding:10px;
+
+    @media @mobile{
+      font-size:1.3em;
+    }
+  }
+}
+
+#credits{
+    margin: 0 auto;
+    max-width: 1200px;
+    width: 80%;
+    border-top: 1px solid #ccc;
+    text-align: center;
+    padding: 3em 0;
+    font-family: @med-graphics;
+
+    @media @mobile{
+      font-size:14px;
+    }
 }
